--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.52.0",
+    "@tanstack/react-query": "^5.83.0",
     "adm-zip": "^0.5.16",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
